<resources>
    <string name="app_name">Prozy</string>
    <string name="youtube_link">YouTube Link</string>
    <string name="destination_folder">Destination Folder</string>
    <string name="download">Download</string>
    <string name="where_you_want_to_save_the_mp3">Where you want to save the MP3</string>
    <string name="select_a_folder">…/Downloads</string>
    <string name="enter_a_link">Enter a link</string>
    <string name="grabbing_info">Grabbing Info…</string>
    <string name="mp4_video_audio">.Mp4(Video + Audio)</string>
    <string name="mp3_audio_only">.Mp3(Audio Only)</string>
</resources>