<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.MainActivity">

    <include layout="@layout/toolbar" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:gravity="center|start"
        android:paddingStart="6dp"
        android:paddingEnd="0dp"
        android:text="@string/youtube_link"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/link"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_margin="12dp"
        android:background="@drawable/background"
        android:hint="@string/enter_a_link"
        android:paddingStart="12dp"
        android:paddingEnd="0dp"
        android:singleLine="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:gravity="center|start"
        android:paddingStart="6dp"
        android:paddingEnd="0dp"
        android:text="@string/destination_folder"
        android:textSize="12sp" />

    <LinearLayout
        android:id="@+id/destinationSelect"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_margin="12dp"
        android:background="@drawable/background"
        android:orientation="horizontal"
        android:padding="12dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@null"
            android:src="@drawable/baseline_folder_open_24" />

        <TextView
            android:id="@+id/destinationName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|start"
            android:paddingStart="6dp"
            android:paddingEnd="0dp"
            android:singleLine="true"
            android:text="@string/select_a_folder"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="12dp"
        android:paddingTop="3dp"
        android:paddingEnd="0dp"
        android:paddingBottom="0dp">

        <ImageView
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_gravity="center|start"
            android:contentDescription="@null"
            android:src="@drawable/baseline_info_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:paddingStart="3dp"
            android:paddingEnd="0dp"
            android:text="@string/where_you_want_to_save_the_mp3" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:layout_marginTop="42dp"
        android:orientation="horizontal"
        android:paddingStart="12dp"
        android:paddingEnd="12dp">

        <Button
            android:id="@+id/downloadBtn"
            style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/download"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <LinearLayout
            android:id="@+id/grabbing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:background="@drawable/btn_background"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone">

            <ProgressBar
                android:layout_width="42dp"
                android:layout_height="42dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="6dp"
                android:gravity="center"
                android:text="@string/grabbing_info"
                android:textColor="@color/white"
                android:textSize="15sp" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>