<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.Activity2">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:background="@drawable/d_background"
        android:minHeight="288dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/thumbnail"
            android:layout_width="292dp"
            android:layout_height="164dp"
            android:layout_gravity="center"
            android:layout_margin="12dp" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="12dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="36dp"
            android:layout_marginBottom="12dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_gravity="center|start"
                android:src="@drawable/baseline_remove_red_eye_24" />

            <TextView
                android:id="@+id/views"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_weight="0.4"
                android:gravity="center|start"
                android:textSize="12sp" />

            <ImageView
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_gravity="center|start"
                android:src="@drawable/baseline_thumb_up_24" />

            <TextView
                android:id="@+id/likes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_weight="0.4"
                android:gravity="center|start"
                android:textSize="12sp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Downloading..."
                android:gravity="center|start"
                android:layout_weight="0.5"/>

            <TextView
                android:id="@+id/percent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="end|center"
                android:layout_weight="0.5"/>

        </LinearLayout>

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/dProgress"
            android:layout_width="match_parent"
            android:layout_height="6dp"
            android:progress="50" />

    </LinearLayout>

    <TextView
        android:id="@+id/radioTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="File Type"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"/>

    <RadioGroup
        android:id="@+id/outType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="24dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/mp4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/mp4_video_audio"/>

        <RadioButton
            android:id="@+id/mp3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/mp3_audio_only"/>

    </RadioGroup>


    <Button
        android:id="@+id/downloadBtn"
        style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/download"
        android:textAllCaps="false"
        android:textColor="@color/white" />
</LinearLayout>